// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.appmanager.sessions;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "personal-website-v2/go-apis/app-manager/sessions;sessions";

// Proto file describing the App session.

// The app session info.
message AppSessionInfo {
    // The unique ID to identify the app session.
    uint64 id = 1;

    // The app ID.
    uint64 app_id = 2;

    // It stores the date and time at which the app session was created.
    google.protobuf.Timestamp created_at = 3;

    // The user ID to identify the user who created the app session.
    uint64 created_by = 4;

    // It stores the date and time at which the app session was updated.
    google.protobuf.Timestamp updated_at = 5;

    // The user ID to identify the user who updated the app session.
    uint64 updated_by = 6;

    // The status of the app session can be New(1), Active(2), or Ended(3).
    AppSessionStatus status = 7;

    // It stores the date and time at which the app session status was updated.
    google.protobuf.Timestamp status_updated_at = 8;

    // The user ID to identify the user who updated the app session status.
    uint64 status_updated_by = 9;

    // Optional. The app session status comment.
    google.protobuf.StringValue status_comment = 10;

    // Optional. The start time of the app session.
    google.protobuf.Timestamp start_time = 11;

    // Optional. The end time of the app session.
    google.protobuf.Timestamp end_time = 12;
}

// The app session status.
enum AppSessionStatus {
    // Unspecified. Do not use.
    APP_SESSION_STATUS_UNSPECIFIED = 0;
    NEW = 1;
    ACTIVE = 2;
    ENDED = 3;
}
